[gd_scene load_steps=2 format=3 uid="uid://dlgmqilr5i5k5"]

[ext_resource type="Script" path="res://Natpunchthrough.gd" id="1_ddu0j"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_ddu0j")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 648.0

[node name="HOST" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -58.0
offset_right = 22.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
text = "HOST"

[node name="JOIN" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -15.5
offset_right = 21.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "JOIN"

[node name="LineEdit" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 32.0
offset_right = 37.5625
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="Control/HOST" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Control/JOIN" to="." method="_on_join_button_down"]
[connection signal="text_changed" from="Control/LineEdit" to="." method="_on_line_edit_text_changed"]
